--- a/index.html
+++ b/index.html
@@ -55,74 +55,87 @@
 
     <main class="contenedor sombra">
         <h2>Mis Servicios</h2>
-        <section>
-            <h3>Diseño Web</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="68" height="68"
-                viewBox="0 0 24 24" stroke-width="2" stroke="#6f32be" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path
-                    d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-            </svg>
-            <p>Eos soluta distinctio labore numquam consequatur, unde
-                reiciendis necessitatibus. Doloribus ipsam, perspiciatis, totam ea dicta iusto saepe at, reiciendis enim
-                nemo
-                pariatur?
-                Voluptate, officiis assumenda deleniti, ullam aspernatur exercitationem autem ratione quas et odio
-                aliquam
-                asperiores nemo, explicabo alias. Quisquam, ea cumque a placeat velit odio repudiandae, esse eius,
-                consequatur
-                veniam consequuntur!
-            </p>
-        </section>
-        <section>
-            <h3>Diseño Macros en Excel</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-rotate-rectangle" width="68"
-                height="68" viewBox="0 0 24 24" stroke-width="2" stroke="#6f32be" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path
-                    d="M16.3 5h.7a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h5l-2.82 -2.82m0 5.64l2.82 -2.82"
-                    transform="rotate(-45 12 12)" />
-            </svg>
-            <p>Eos soluta distinctio labore numquam consequatur, unde
-                reiciendis necessitatibus. Doloribus ipsam, perspiciatis, totam ea dicta iusto saepe at, reiciendis enim
-                nemo
-                pariatur?
-                Voluptate, officiis assumenda deleniti, ullam aspernatur exercitationem autem ratione quas et odio
-                aliquam
-                asperiores nemo, explicabo alias. Quisquam, ea cumque a placeat velit odio repudiandae, esse eius,
-                consequatur
-                veniam consequuntur!
-            </p>
-        </section>
-        <section>
-            <h3>Desarrollo Python Django</h3>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-python" width="68"
-                height="68" viewBox="0 0 24 24" stroke-width="2" stroke="#6f32be" fill="none" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M12 9h-7a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h3" />
-                <path d="M12 15h7a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-3" />
-                <path
-                    d="M8 9v-4a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v5a2 2 0 0 1 -2 2h-4a2 2 0 0 0 -2 2v5a2 2 0 0 0 2 2h4a2 2 0 0 0 2 -2v-4" />
-                <line x1="11" y1="6" x2="11" y2="6.01" />
-                <line x1="13" y1="18" x2="13" y2="18.01" />
-            </svg>
-            <p>Eos soluta distinctio labore numquam consequatur, unde
-                reiciendis necessitatibus. Doloribus ipsam, perspiciatis, totam ea dicta iusto saepe at, reiciendis enim
-                nemo
-                pariatur?
-                Voluptate, officiis assumenda deleniti, ullam aspernatur exercitationem autem ratione quas et odio
-                aliquam
-                asperiores nemo, explicabo alias. Quisquam, ea cumque a placeat velit odio repudiandae, esse eius,
-                consequatur
-                veniam consequuntur!
-            </p>
-        </section>
+
+        <div class="servicios">
+            <section class="servicio">
+                <h3>Diseño Web</h3>
+                <div class="iconos">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="68"
+                        height="68" viewBox="0 0 24 24" stroke-width="2" stroke="#6f32be" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path
+                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                    </svg>
+                </div>
+                <p>Eos soluta distinctio labore numquam consequatur, unde
+                    reiciendis necessitatibus. Doloribus ipsam, perspiciatis, totam ea dicta iusto saepe at, reiciendis
+                    enim
+                    nemo
+                    pariatur?
+                    Voluptate, officiis assumenda deleniti, ullam aspernatur exercitationem autem ratione quas et odio
+                    aliquam
+                    asperiores nemo, explicabo alias. Quisquam, ea cumque a placeat velit odio repudiandae, esse eius,
+                    consequatur
+                    veniam consequuntur!
+                </p>
+            </section>
+            <section class="servicio">
+                <h3>Diseño Macros en Excel</h3>
+                <div class="iconos">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-rotate-rectangle"
+                        width="68" height="68" viewBox="0 0 24 24" stroke-width="2" stroke="#6f32be" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path
+                            d="M16.3 5h.7a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h5l-2.82 -2.82m0 5.64l2.82 -2.82"
+                            transform="rotate(-45 12 12)" />
+                    </svg>
+                </div>
+                <p>Eos soluta distinctio labore numquam consequatur, unde
+                    reiciendis necessitatibus. Doloribus ipsam, perspiciatis, totam ea dicta iusto saepe at, reiciendis
+                    enim
+                    nemo
+                    pariatur?
+                    Voluptate, officiis assumenda deleniti, ullam aspernatur exercitationem autem ratione quas et odio
+                    aliquam
+                    asperiores nemo, explicabo alias. Quisquam, ea cumque a placeat velit odio repudiandae, esse eius,
+                    consequatur
+                    veniam consequuntur!
+                </p>
+            </section>
+            <section class="servicio">
+                <h3>Desarrollo Python Django</h3>
+                <div class="iconos">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-python" width="68"
+                        height="68" viewBox="0 0 24 24" stroke-width="2" stroke="#6f32be" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M12 9h-7a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h3" />
+                        <path d="M12 15h7a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-3" />
+                        <path
+                            d="M8 9v-4a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v5a2 2 0 0 1 -2 2h-4a2 2 0 0 0 -2 2v5a2 2 0 0 0 2 2h4a2 2 0 0 0 2 -2v-4" />
+                        <line x1="11" y1="6" x2="11" y2="6.01" />
+                        <line x1="13" y1="18" x2="13" y2="18.01" />
+                    </svg>
+                </div>
+                <p>Eos soluta distinctio labore numquam consequatur, unde
+                    reiciendis necessitatibus. Doloribus ipsam, perspiciatis, totam ea dicta iusto saepe at, reiciendis
+                    enim
+                    nemo
+                    pariatur?
+                    Voluptate, officiis assumenda deleniti, ullam aspernatur exercitationem autem ratione quas et odio
+                    aliquam
+                    asperiores nemo, explicabo alias. Quisquam, ea cumque a placeat velit odio repudiandae, esse eius,
+                    consequatur
+                    veniam consequuntur!
+                </p>
+            </section>
+        </div>
+        <!--Cierre clase servicios-->
     </main>
 
     <section>
